monticore-generator/src/test/resources/cocos/invalid/A4009/A4009d.mc4
package cocos.invalid.A4009;

grammar A4009d extends mc.grammars.types.TestTypes {

  external QualifiedName;

}
